--- a/contato.html
+++ b/contato.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>Chicago Blackhawks Brasil - Contato</title>
+  	<title>Contato - Chicago Blackhawks Brasil</title>
   	<link rel="stylesheet" type="text/css" href="assets/stylesheets/style.css">
     <link rel="icon" href="assets/images/logo.png">
   </head>
@@ -12,13 +12,13 @@
           <img id="logo" src="assets/images/logo.png" alt="logo">
         </figure>
         <h1>Chicago Blackhawks Brasil</h1>
-        <nav class="nav_bar">
-          <a href="home.html">Home</a>
-    			<a href="sobre.html">Sobre</a>
-    			<a href="fotos.html">Fotos</a>
-    			<a href="contato.html">Contatos</a>
-        </nav>
       </header>
+      <nav class="nav_bar">
+        <a href="home.html">Home</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="fotos.html">Fotos</a>
+        <a href="contato.html">Contatos</a>
+      </nav>
       <section class="corpo">
         <h1>Contato</h1>
         <form class="" action="index.html" method="post">
@@ -41,7 +41,10 @@
       </section>
       <footer>
         <hr>
-        <address>Rua Vinte e Quatro de Junho, 279, Recife-PE</address>
+        <address>
+          <h3>Blackhawks Pub</h3>
+          Rua Vinte e Quatro de Junho, 279, Recife-PE
+        </address>
       </footer>
     </div>
   </body>
