--- a/home.html
+++ b/home.html
@@ -12,23 +12,51 @@
           <img id="logo" src="assets/images/logo.png" alt="logo">
         </figure>
         <h1>Chicago Blackhawks Brasil</h1>
-        <nav class="nav_bar">
-          <a href="home.html">Home</a>
-    			<a href="sobre.html">Sobre</a>
-    			<a href="fotos.html">Fotos</a>
-    			<a href="contato.html">Contatos</a>
-        </nav>
       </header>
-      <section class="corpo">
-        <header>
-          <figure class="banner">
-            <img src="assets/images/rally.png" alt="">
-          </figure>
-        </header>
+      <nav id="tst" class="nav_bar">
+        <a href="home.html" class="nav_link">Home</a>
+        <a href="sobre.html" class="nav_link">Sobre</a>
+        <a href="fotos.html" class="nav_link">Fotos</a>
+        <a href="contato.html" class="nav_link">Contatos</a>
+      </nav>
+      <section>
+        <figure class="banner">
+          <img src="assets/images/rally.png" alt="">
+        </figure>
+        <h1 class="titulo">O Fã Clube Oficial do Chicago Blackhawks no Brasil</h1>
+        <aside class="home_aside">
+          <section>
+            <article class="news">
+              <h2><a href="home.html">Não foi dessa vez</a></h2>
+              <p>Desepenho muito fraco em Nashville</p>
+            </article>
+            <article class="news">
+              <h2><a href="home.html">Como será a temporada 2017/2018?</a></h2>
+              <p>Desepenho muito fraco em Nashville</p>
+            </article>
+            <article class="news">
+              <h2><a href="home.html">Por que odiamos Boston</a></h2>
+              <p>Entenda a rivalide centenaria</p>
+            </article>
+            <article class="news">
+              <h2><a href="home.html">Playoffs 2016/2017</a></h2>
+              <p>Foi fácil chegar. Será o ano do hepta?</p>
+            </article>
+          </section>
+        </aside>
+        <article class="home_article">
+          <h2>Venha conhecer nosso pub</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </article>
       </section>
       <footer>
         <hr>
-        <address>Rua Vinte e Quatro de Junho, 279, Recife-PE</address>
+        <address>
+          <h3>Blackhawks Pub</h3>
+          Rua Vinte e Quatro de Junho, 279, Recife-PE
+        </address>
       </footer>
     </div>
   </body>
