--- a/sobre.html
+++ b/sobre.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>Chicago Blackhawks Brasil - Sobre</title>
+  	<title>Sobre - Chicago Blackhawks Brasil</title>
   	<link rel="stylesheet" type="text/css" href="assets/stylesheets/style.css">
     <link rel="icon" href="assets/images/logo.png">
   </head>
@@ -12,27 +12,35 @@
           <img id="logo" src="assets/images/logo.png" alt="logo">
         </figure>
         <h1>Chicago Blackhawks Brasil</h1>
-        <nav class="nav_bar">
-          <a href="home.html">Home</a>
-          <a href="sobre.html">Sobre</a>
-          <a href="fotos.html">Fotos</a>
-          <a href="contato.html">Contatos</a>
-        </nav>
       </header>
+      <nav class="nav_bar">
+        <a href="home.html">Home</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="fotos.html">Fotos</a>
+        <a href="contato.html">Contatos</a>
+      </nav>
       <section class="corpo">
         <header>
           <figure class="banner">
             <img src="assets/images/united.png" alt="">
           </figure>
-          <h1>O Fã Clube Oficial do Chicago Blackhawks no Brasil</h1>
+          <h1>Vivendo em Recife, mas com o coração em Chicago</h1>
         </header>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tortor justo. Cras rhoncus imperdiet erat, vitae aliquam sem fringilla porttitor. Duis volutpat id urna vel consectetur. Duis congue sodales augue. Nunc rutrum quis lorem sed aliquet. Proin sed gravida risus, vel maximus nisl. Mauris sit amet sem sed leo pharetra luctus. Aliquam quis libero eu tellus sollicitudin consequat vel a felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus vitae nibh in lorem posuere bibendum vehicula sit amet velit. Maecenas eget leo interdum, ultricies nisl id, blandit nibh. Aenean pharetra augue eget ante ultricies, ullamcorper aliquam nibh laoreet.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tortor justo. Cras rhoncus imperdiet erat, vitae aliquam sem fringilla porttitor. Duis volutpat id urna vel consectetur. Duis congue sodales augue. Nunc rutrum quis lorem sed aliquet. Proin sed gravida risus, vel maximus nisl. Mauris sit amet sem sed leo pharetra luctus. Aliquam quis libero eu tellus sollicitudin consequat vel a felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus vitae nibh in lorem posuere bibendum vehicula sit amet velit. Maecenas eget leo interdum, ultricies nisl id, blandit nibh. Aenean pharetra augue eget ante ultricies, ullamcorper aliquam nibh laoreet.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in leo quis felis cursus posuere nec vel orci. Nulla aliquet nunc in lacus sagittis sollicitudin. Pellentesque ac pulvinar nulla. Phasellus sit amet quam ex. Etiam ultrices, lectus vitae fermentum iaculis, lectus velit rhoncus elit, in pellentesque dolor dolor aliquam purus. Quisque eget arcu justo. Nunc nec risus et turpis aliquet aliquet. Quisque ac lacus hendrerit, euismod quam at, maximus orci.</p>
+        <figure class="banner">
+          <img src="assets/images/pub.jpg" alt="">
+        </figure>
+        <h1>Venha conhecer nosso pub, no coração da Encruzilhada</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </section>
       <footer>
         <hr>
-        <address>Rua Vinte e Quatro de Junho, 279, Recife-PE</address>
+        <address>
+          <h3>Blackhawks Pub</h3>
+          Rua Vinte e Quatro de Junho, 279, Recife-PE
+        </address>
       </footer>
     </div>
   </body>
